--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
     padding: 10px 0;
     border: 2px solid var(--btnandtext-color);
     z-index: 2000;
+    text-align: center;
+    font-size: 11px;
+    
+}
+.attribution a{
+    font-weight: 600;
+    color: blue;
 }
 *{
     margin: 0;
