--- a/style.css
+++ b/style.css
@@ -53,7 +53,59 @@ nav{
     height: 20px;
 }
 .mobile-nav{
+    z-index: 1000;
+    position: fixed;
+    height: 100vh;
+    right: -1500px; 
+    width: 60%;
+    padding: 10px 20px;
+    background-color: white;
+    transition: all 1s linear;
+}
+.nav-featuresid{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 20px;
+    margin-left: 30px;
+    transition: all .3s linear;
+}
+.nav-featuresid a{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.nav-companyid{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+.hides{
     display: none;
+}
+.top{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    margin-bottom: 20px;
+    
+}
+.buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+#nav-register-button{
+    border: 2px solid var(--links-color);
+    padding: 10px 10px;
+    border-radius: 6px;
+    width: 95%;
+    text-align: center;
 }
 .left-side, .right-side{
     display: flex;
@@ -81,12 +133,9 @@ button{
     cursor: pointer;
 }
 .featuresid{
-    display: none;
-}
-.features-content{
     flex-direction: column;
     position: absolute;
-    top: 40px;
+    top: -300px;
     left: -40px;
     width: 120px;
     gap: 10px;
@@ -95,6 +144,10 @@ button{
     border-radius: 8px;
     box-shadow: 2px 2px 5px grey;
     display: flex;
+    transition: all .3s linear;
+}
+.features-content{
+  top: 40px;
    }
    .features-content a{
     display: flex;
@@ -108,13 +161,9 @@ button{
     position: relative;
 }
 .companyid{
-    display: none;
-}
-
-.company-content{
     flex-direction: column;
     position: absolute;
-    top: 40px;
+    top: -300px;
     width: 100px;
     gap: 10px;
     padding: 20px 20px;
@@ -122,6 +171,11 @@ button{
     border-radius: 8px;
     box-shadow: 2px 2px 5px grey;
     display: flex;
+    transition: all .3s linear;
+}
+
+.company-content{
+    top: 40px;
    }
 
    .company-content a{
@@ -245,7 +299,6 @@ button{
     display: none;
    }
    .mobile-nav {
-    display: none; 
     z-index: 1000;
     position: fixed;
     height: 100vh;
@@ -253,57 +306,15 @@ button{
     width: 60%;
     padding: 10px 20px;
     background-color: white;
-    transition: all 1s linear;
+    transition: all .2s linear;
   }
 
   .mobile-nav.show {
     right: 0;
     display: block;
   }
-.nav-featuresid{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    margin-top: 20px;
-    margin-left: 30px;
-}
-.nav-featuresid a{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-.nav-companyid{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    margin-top: 20px;
-    margin-left: 30px;
-}
-.top{
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    margin-bottom: 20px;
-    
-}
-.buttons{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-}
-#nav-register-button{
-    border: 2px solid var(--links-color);
-    padding: 10px 10px;
-    border-radius: 6px;
-    width: 95%;
-    text-align: center;
-}
-.hides{
-    display: none;
-}
+
+
    .features-content{
     display: none;
    }
